Network Intelligence, issues
core/src/main/resources/com/soffid/iam/service/messages.properties
core/src/main/resources/com/soffid/iam/service/messages_ca.properties
core/src/main/resources/com/soffid/iam/service/messages_es.properties